hphp/hack/test/typecheck/function_pointer/class_meth_reified_self.php.rust_elab.exp
File "class_meth_reified_self.php", line 7, characters 5-8:
Cannot use `self::` in a function pointer in a non-final class due to class context ambiguity. Consider using `Foo::bar` instead (Naming[2113])
File "class_meth_reified_self.php", line 7, characters 5-15:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "class_meth_reified_self.php", line 4, characters 26-28:
  Definition is here
